Update from https://github.com/StatelyCloud/stately/commit/5846746efe6ecb0e08b3d6a95d888b0905724416